# rust-blog

./: CLAUDE.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json  setup-claude.sh
data/: 453e079e-f16f-470d-8116-8621f2dcce32.json  index.json
docs/: implementation-plan.md  requirements.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/models/: article.rs  mod.rs
src/storage/: file_storage.rs  mod.rs
tests/: integration_test.rs
